封装起来，以后再继续写

--- a/Twitter/src/main/webapp/WEB-INF/views/home.html
+++ b/Twitter/src/main/webapp/WEB-INF/views/home.html
@@ -11,7 +11,8 @@
   
     <div id="content">
       <h1>Welcome to Spitter</h1>
-  
+  		
+  	  <a th:href="@{/login}">Login</a> |
       <a th:href="@{/spittles}">Spittles</a> | 
       <a th:href="@{/spitter/register}">Register</a>
       
